$Id$

v0.83.7		31-Dec-2005

v0.83.6		17-Dec-2005 - 31-Dec-2005

	mbfido:
		Removed gated SB debug logmessages.
		Removed debug messages for obsolete ticfiles.

	mbcico:
		Don't add files to send anymore when batchnr > 20 to prevent
		an infinite session loop.

	mbfile:
		Fixed a crash when files.bbs had empty lines.

	mbtask:
		Better messages during servers connections reset.


v0.83.5		16-Dec-2005 - 17-Dec-2005

	mbtask:
		Better handling of changes in the list of chatservers.
		Added some missing mutex_locks.
		Removed dynamic IP address debug logging.
		Added global reset for chatservers every 24 hours.


v0.83.4		04-Dec-2005 - 16-Dec-2005

	mbfile:
		Fixed file importing of non-archived files.
		The test for files.bbs for files to import was done in the
		wrong directory.
		If a file is not removed from disk during pack, a error log
		is created instead of a normal log.

	mbtask:
		Experimental code to recover from a half dead chatlink.
		Added some protection against looped configuration.
		All IBC log lines start now with IBC: to allow easier grep.


v0.83.3		03-Dec-2005 - 04-Dec-2005

	remark:
		This version was broken.

	libmbse.a:
		Fixed new tmpwork functions.

	mbfido:
		Fixed creation of tmpwork directory.


v0.83.2		16-Nov-2005 - 03-Dec-2005

	libmbse.a:
		Added temp workdirectory functions.

	mbfido:
		Fixed crash when receiving bad tics.
		Reinstalled tic orphans and bad crc handling using new method.
		Removed some debug logging.
		Now using new tmp workdirectory functions.
		When a hatch directory doesn't exist, it is created.

	mbfile:
		Now using new tmp workdirectory functions.

	mbsebbs:
		Added check for users homedirectory permissions and attempt to
		fix errors. If fatal the connection is dropped.
		Fixed virus scan of uploaded archives.


v0.83.1		12-Nov-2005 - 16-Nov-2005

	mbfido:
		Added some experimental code for tic orphans processing.

	mbmon:
		Improved error message when the chatserver is not configured
		in /etc/services.
